# CC_02

./: .gitignore  Notes.md  README.md
.github/workflows/: rust.yml
frontend/: new_entry.html
insurance/: Cargo.toml  Rocket.toml  contracts.sqlite
insurance/folder/: testdatabase
insurance/src/: contracts.sqlite  lib.rs  main.rs
insurance/testres/: data.sqlite  database_count.sqlite  search.sqlite
insurance/testres/folder/: testdatabase.sqlite
