[package]
name = "insurance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.27.0", features = [ "backup", ]}
chrono = "0.4.19"
rocket = "0.5.0-rc.1"
rand = "0.8.5"
serde = "1.0.136"
serde_json = "1.0.79"
